Fix comment spacing

--- a/client/stylesheets/comments.import.less
+++ b/client/stylesheets/comments.import.less
@@ -45,7 +45,7 @@
 
 .comment-pro, 
 .comment-con { 
-  padding: 10px; 
+  padding: 7.5px;
 }
 .comment-pro { padding-left: @main-padding; }
 .comment-con { padding-right: @main-padding; }
